# RichText-Androidx

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/zhou/demo/: ListViewActivity.java  MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_test.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/zhou/demo/: ExampleUnitTest.java
composeapp/: build.gradle.kts
composeapp/src/main/: AndroidManifest.xml
composeapp/src/main/kotlin/org/uooc/composeapp/: HtmlFormater.kt  MainActivity.kt  RichTextCompose.android.kt  RichTextCompose.kt
composeapp/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
okhttpimagedownloader/: build.gradle.kts  proguard-rules.pro
richtext/: .gitignore  build.gradle.kts  proguard-rules.pro
richtext/src/main/cpp/: CMakeLists.txt  freetype_jni.cpp
richtext/src/main/java/com/pvporbit/freetype/: Bitmap.java  CharMap.java  Face.java  FreeType.java  GlyphMetrics.java  GlyphSlot.java  Library.java  MTFreeTypeMathTable.kt  Size.java  SizeMetrics.java  Utils.java
richtext/src/main/java/com/zzhoujay/richtext/: ImageHolder.kt  RichText.java  RichTextConfig.java
richtext/src/main/java/com/zzhoujay/richtext/drawable/: DrawableSizeHolder.java
richtext/src/main/java/com/zzhoujay/richtext/ext/: HtmlTagHandler.java
richtext/src/main/java/com/zzhoujay/richtext/ig/: AbstractImageLoader.java  SourceDecode.java
(+21 files in other folders)
